syntax = "proto3";
package zealot;

message X3dhPublicKeysProto {
    bytes ik_public = 1;
    bytes signing_key_public = 2;
    uint32 spk_id = 3;
    bytes spk_public = 4;
    bytes signature = 5;
    optional bytes otpk_public = 6;
    optional uint32 otpk_id = 7;
}

message AccountProto {
    uint32 version = 1;
    bytes ik = 2;
    SignedPreKeyStoreProto spk_store = 3;
    uint64 spk_last_rotation = 4;
    OneTimePreKeyStoreProto otpk_store = 5;
    AccountConfigProto config = 6;
}

message OneTimePreKeyStoreProto {
    uint32 next_id = 1;
    uint64 max_keys = 2;
    map<uint32, bytes> keys = 3;
}

message SignedPreKeyStoreProto {
    uint32 next_id = 1;
    uint64 max_keys = 2;
    map<uint32, bytes> keys = 3;
}

message AccountConfigProto {
    uint32 max_skipped_messages = 1;
    uint64 spk_rotation_interval_secs = 2;
    uint64 min_otpks = 3;
    uint64 max_otpks = 4;
    uint64 max_spks = 5;
    bytes protocol_info = 6;
}

message OutboundSessionX3dhKeysProto {
    uint32 spk_id = 1;
    optional uint32 otpk_id = 2;
    bytes ephemeral_key_public = 3;
}

message SessionProto {
    string session_id = 1;
    RatchetProto ratchet = 2;
    optional OutboundSessionX3dhKeysProto x3dh_keys = 3;
}

message RatchetProto {
    bytes dh_pair = 1;
    RatchetStateProto state = 2;
    repeated SkippedMessageKeyProto skipped_message_keys = 3;
    uint32 max_skip = 4;
}

message SkippedMessageKeyProto {
    bytes header_key = 1;
    uint32 message_number = 2;
    bytes message_key = 3;
}

message RatchetStateProto {
    bytes remote_dh_key_public = 1;
    bytes root_key = 2;
    ChainProto sending_chain = 3;
    ChainProto receiving_chain = 4;
    uint32 previous_sending_chain_length = 5;
    uint32 sending_message_number = 6;
    uint32 receiving_message_number = 7;
    bytes sending_header_key = 8;
    bytes receiving_header_key = 9;
    bytes next_sending_header_key = 10;
    bytes next_receiving_header_key = 11;
}

message ChainProto {
    bytes chain_key = 1;
    uint32 index = 2;
}
